--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-  background-image: url("../latihan5/image/header.jpg");
+  background-image: url("image/header.jpg");
   background-repeat: no-repeat;
   padding: 20px;
   text-align: center;
